Archive2/10/dba145a6828e55/output
main.cpp: In member function 'void TheFriend::f()':
main.cpp:9:25: error: 'const int Outer::Inner::i' is private
        static const int i = -1;
                         ^
main.cpp:12:57: error: within this context
 struct TheFriend{ void f() { std::cout << Outer::Inner::i << '\n'; } };
                                                         ^
